--- a/day9/Cargo.toml
+++ b/day9/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "day2"
+name = "day9"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 parser = { path="../parser" }
 computer = { path="../computer" }
+itertools = "0.14.0"
