--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = [ "computer","day1", "day2", "day5", "day7", "parser"]
+members = [ "computer","day1", "day2", "day5", "day7", "day9", "parser"]
